base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: menu-admin-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: menu-admin-service
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: menu-admin-service          
    spec:
      containers:
        - name: menu-admin-service
          resources:
            limits:
              cpu: 1000m
              memory: 1024Mi
            requests:
              cpu: 300m
              memory: 256Mi        
          readinessProbe:
            httpGet:
              path: /q/health/ready
              port: 8080
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /q/health/live
              port: 8080
              scheme: HTTP
            timeoutSeconds: 2
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          image: image-registry.openshift-image-registry.svc:5000/openshift/quarkus:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
