base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: menu-admin-service
  name: menu-admin-service
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
  selector:
    app: menu-admin-service
