base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: menu-admin-service
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: menu-admin-service
    weight: 100
  wildcardPolicy: None
